<resources>
    <string name="app_name">UpscQuiz</string>
    <string name="title_text">Java Quiz</string>
    <string name="question_area">This is where our first question will appear and let us see how it looks like</string>
    <string name="option_a">A)</string>
    <string name="option_b">B)</string>
    <string name="option_c">C)</string>
    <string name="option_d">D)</string>
    <string name="Show_answer">Show Answer</string>
    <string name="next_question">Next</string>
    <string name="answer_text_appear" />
    <string name="prev_button">PREV</string>
    <string name="java_quiz">Java Quiz</string>
</resources>