<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_color"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/java_title"
            android:layout_width="108dp"
            android:layout_height="40dp"
            android:layout_marginTop="52dp"
            android:fontFamily="sans-serif"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="389dp"
            android:layout_height="165dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="412dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/java_title"
            app:layout_constraintVertical_bias="0.826">

            <TextView
                android:id="@+id/question_textview"
                android:layout_width="365dp"
                android:layout_height="134dp"
                android:layout_gravity="center"
                android:text="@string/question_area"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/option_a"
            style="@style/options_style"
            android:layout_marginTop="20dp"

            android:background="@drawable/rounded_corner_view"
            android:shadowRadius="10"
            android:text="@string/option_a"
            app:layout_constraintEnd_toEndOf="@+id/option_b"
            app:layout_constraintStart_toStartOf="@+id/option_b"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/option_b"
            style="@style/options_style"
            android:layout_width="347dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner_view"
            android:text="@string/option_b"

            app:layout_constraintEnd_toEndOf="@+id/option_c"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/option_c"
            app:layout_constraintTop_toBottomOf="@+id/option_a" />

        <TextView
            android:id="@+id/option_c"
            style="@style/options_style"
            android:layout_width="348dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner_view"
            android:text="@string/option_c"
            app:layout_constraintEnd_toEndOf="@+id/option_d"
            app:layout_constraintStart_toStartOf="@+id/option_d"
            app:layout_constraintTop_toBottomOf="@+id/option_b" />

        <TextView
            android:id="@+id/option_d"
            style="@style/options_style"
            android:layout_width="346dp"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner_view"
            android:text="@string/option_d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_c"
            app:layout_constraintVertical_bias="0.035" />

        <Button
            android:id="@+id/showAnswer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#6D101326"
            android:text="@string/Show_answer"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/next_button"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintTop_toTopOf="@+id/next_button"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="#6D101326"
            android:text="@string/next_question"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_d" />

        <TextView
            android:id="@+id/answer_TextView"
            android:layout_width="178dp"
            android:layout_height="25dp"
            android:text="@string/answer_text_appear"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showAnswer_button"
            app:layout_constraintVertical_bias="0.289" />

        <Button
            android:id="@+id/button"
            android:layout_width="82dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#6D101326"
            android:text="@string/prev_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/showAnswer_button"
            app:layout_constraintEnd_toStartOf="@+id/showAnswer_button"
            app:layout_constraintTop_toTopOf="@+id/showAnswer_button"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>